flex wrap fix

--- a/carma_chameleon/styles.css
+++ b/carma_chameleon/styles.css
@@ -129,6 +129,7 @@ div img {
 .car-box {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 div div {
